First push to our fork

--- a/ckanext/ckanpackager/theme/public/resource.config
+++ b/ckanext/ckanpackager/theme/public/resource.config
@@ -4,4 +4,9 @@
 
 main =
     scripts/modules/ckanpackager-download-link.js
+
+    scripts/modules/ckanpackager-dl-checkbox.js
+#    scripts/vendor/js.cookie.min.js
+
     css/ckanpackager.css
+    scripts/cubric_utils.js
