--- a/ckanext/ckanpackager/theme/public/resource.config
+++ b/ckanext/ckanpackager/theme/public/resource.config
@@ -6,7 +6,7 @@ main =
     scripts/modules/ckanpackager-download-link.js
 
     scripts/modules/ckanpackager-dl-checkbox.js
-#    scripts/vendor/js.cookie.min.js
+    scripts/modules/ckanpackager-dl-package.js
 
     css/ckanpackager.css
     scripts/cubric_utils.js
