--- a/ckanext/ckanpackager/theme/public/resource.config
+++ b/ckanext/ckanpackager/theme/public/resource.config
@@ -7,6 +7,12 @@ main =
 
     scripts/modules/ckanpackager-dl-checkbox.js
     scripts/modules/ckanpackager-dl-package.js
+    scripts/modules/filetreeview.js
 
     css/ckanpackager.css
+    vendor/glyphicon/css/bootstrap-glyphicons.css
+
     scripts/cubric_utils.js
+    scripts/d3.v3.js
+    scripts/treelist.js
+    scripts/do_tree.js
