--- a/ckanext/ckanpackager/theme/public/resource.config
+++ b/ckanext/ckanpackager/theme/public/resource.config
@@ -4,6 +4,7 @@
 
 main =
     scripts/modules/ckanpackager-download-link.js
+    scripts/modules/ckanpackager-download-list.js
 
     scripts/modules/ckanpackager-dl-checkbox.js
     scripts/modules/ckanpackager-dl-package.js
