--- a/ckanext/ckanpackager/theme/public/resource.config
+++ b/ckanext/ckanpackager/theme/public/resource.config
@@ -8,6 +8,8 @@ main =
 
     scripts/modules/ckanpackager-dl-checkbox.js
     scripts/modules/ckanpackager-dl-package.js
+
+    scripts/modules/ckanpackager-dl-popup.js
     scripts/modules/filetreeview.js
 
     css/ckanpackager.css
